<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.DetailMovieActivity"
    android:background="@color/primary">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_movie"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginVertical="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@null"
        android:layout_margin="20dp"
        android:src="@drawable/back"
        android:contentDescription="@string/back"/>

    <LinearLayout
        android:id="@+id/detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/detail_title"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:id="@+id/detail_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/detail_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/detail_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textSize="18sp"
                    android:textColor="@color/grey"
                    android:layout_marginEnd="20dp"/>

                <TextView
                    android:id="@+id/detail_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginEnd="20dp"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>