<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.main.view.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        tools:listitem="@layout/item_list" />

<!--    <com.google.android.material.progressindicator.CircularProgressIndicator-->
<!--        android:id="@+id/movie_loading"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:indeterminate="true"-->
<!--        app:indicatorColor="@color/white" />-->

<!--    <TextView-->
<!--        android:id="@+id/movie_status"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_margin="60dp"-->
<!--        android:text="@string/app_name"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="16sp" />-->

</FrameLayout>